tests/ui/dyn-star/align.normal.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/align.rs:9:12
   |
LL | #![feature(dyn_star)]
   |            ^^^^^^^^
   |
   = 
   = 

error: internal compiler error: $COMPILER_DIR/rustc_const_eval/src/interpret/operand.rs:389:13: primitive read not possible for type: AlignedUsize
  --> $DIR/align.rs:21:13
   |
LL |     let x = AlignedUsize(12) as dyn* Debug;
   |             ^^^^^^^^^^^^^^^^


stack backtrace:







query stack during panic:
#0 [mir_drops_elaborated_and_const_checked] elaborating drops for `main`
#1 [collect_crate_mono_items_for_check] monomorphize the crate graph
end of query stack
error: aborting due to previous error; 1 warning emitted

